# python-game-vault

./: .env.example  .vault_index.pkl  README.md  agent.py  embeddings.py  fal_tools.py  image_gen.py  main.py  models.py  providers.py  pyproject.toml  requirements.txt  staging.py  studio.html  vault.py  video_gen.py  vision.py  watcher.py
vault/.obsidian/: workspace.json
vault/Locations/Willowmere/: Ironfoot Smithy.md  Mabel's Sundries.md  The Hearthstone Inn.md  Willowmere.md
vault/NPCs/: Aldric Thorne.md  Breta Ironfoot.md  Corwin Dunbrook.md  Elda Moss.md  Gareth Hollowell.md  Hanna Hollowell.md  Jorin Thorne.md  Lily Hollowell.md  Mabel Dunbrook.md  Old Brennan.md  Verna Ashwell.md  Willem Moss.md
