[project]
name = "rpg-vault-agent"
version = "1.0.0"
description = "Claude/Grok-powered backend for managing an Obsidian RPG campaign vault"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-frontmatter>=1.1.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "fal-client>=0.5.0",
]

# Build system is required so `uv sync` installs the project itself as an
# editable package.  Without this, the `providers/` subdirectory is not on
# sys.path in uvicorn's reloader subprocess, causing ModuleNotFoundError.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling which packages to include when installing.
# This makes the providers/ sub-package available everywhere Python runs.
[tool.hatch.build.targets.wheel]
packages = ["providers"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# Force uv to always fetch torch from the CPU-only index.
# This prevents it from downloading the 2.5GB CUDA build when running
# inside Docker where GPU support is not needed.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }